--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,28 @@
         font-family: Proxima Nova, system-ui, sans-serif;
     }
 }
+
+@layer components {
+    .page-link:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        border: 18px solid #f43f5e;
+        border-left-color: transparent;
+        border-bottom-color: transparent;
+        border-radius: 50%;
+        opacity: 0;
+        transform: rotate(155deg);
+        transition: all 0.3s ease 0s;
+    }
+    .page-link:hover {
+        box-shadow: 0 0 15px #ccc;
+    }
+    .page-link:hover:before {
+        opacity: 1;
+        transform: rotate(-45deg);
+    }
+}
